First failing attempt at merging together all the various upstreams for this component into something that might do the right things, even the simplest part 'android-rootfs.mount' fails to mount.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lxc-android (0.2+gemian) buster; urgency=medium
+
+  * Updated for cosmo
+
+ -- Adam Boardman <adamboardman@gmail.com>  Wed, 30 Dec 2020 19:15:00 +0000
+
 lxc-android (0.1+gemian1) stretch; urgency=medium
 
   * Branched for gemian
